UtahLiveDataTest/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>HideNewGoalBtn__c</fullName>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;), (TEXT(Status__c) != &apos;Being Amended&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Goal Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewPackageBtn__c</fullName>
        <description>Logic for Hiding New Package Button</description>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Package Button</inlineHelpText>
        <label>Hide New Package Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNotCreated__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Not Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePlanTab__c</fullName>
        <formula>AND(ISPICKVAL(  KPIsRequired__c  ,&apos;No&apos;),ISPICKVAL(  IsGoalsRequired__c  ,&apos;No&apos;),ISPICKVAL(  IsWBSRequired__c  ,&apos;No&apos;))</formula>
        <label>HidePlanTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramContact__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideProgramContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUOVCFields__c</fullName>
        <formula>IF(Account__r.Name != &apos;UOVC&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUOVCFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBEFields__c</fullName>
        <formula>IF(Account__r.Name != &apos;USBE&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUSBEFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewPR__c</fullName>
        <formula>ISPICKVAL(ProgramPaymentBatchStatus__c,&apos;Initiate&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideViewPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideWBS__c</fullName>
        <formula>ISPICKVAL( IsWBSRequired__c , &apos;No&apos;)</formula>
        <label>HideWBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <description>Created to show up on the portal</description>
        <label>Internal Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsFederalProgram__c</fullName>
        <description>Checking based on record type, whether it is Federal Program Or State Program</description>
        <formula>IF( RecordType.Name = &quot;External Program&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Federal Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGoalsRequired__c</fullName>
        <label>Is Goals Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsNoReviewStepProgram__c</fullName>
        <formula>IF(ISPICKVAL(ReviewProcess__c, &apos;No Review&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNoReviewStepProgram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProjectServiceAreaneeded__c</fullName>
        <description>This directs user to whether user Project/Service Area or not use it.</description>
        <label>Is Project/Service Area Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will will true if record is sent to owner</description>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWBSRequired__c</fullName>
        <label>Is WBS Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPIsRequired__c</fullName>
        <label>KPI&apos;s Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeyPerformanceIndicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core Service Area</label>
        <referenceTo>KeyPerformanceIndicator__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LengthandTimePhasingofAssistance__c</fullName>
        <label>Length And Time Phasing Of Assistance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>IF (RecordType.DeveloperName == &apos;ExternalProgram&apos;, &apos;FPG-&apos;, &apos;PG-&apos;) + Account__r.Code__c+&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NeedUSBEApprovalProcess__c</fullName>
        <formula>OR(TEXT(ProgramPathway__c) = &apos;Fed-Formula&apos;, TEXT(ProgramPathway__c) = &apos;Application 1/12th&apos;, TEXT(ProgramPathway__c) = &apos;State-Competitive&apos;, TEXT(ProgramPathway__c) = &apos;Fed-Competitive&apos;, TEXT(ProgramPathway__c) = &apos;Lump-Sum-App&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NeedUSBEApprovalProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGName1__c</fullName>
        <label>ORGName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Lookup</label>
        <referenceTo>r_obj__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7512</fullName>
                </value>
                <value>
                    <fullName>7501</fullName>
                </value>
                <value>
                    <fullName>7521</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obligations__c</fullName>
        <label>Obligations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherEligibleApplicantTypes__c</fullName>
        <label>Other Eligible Applicant Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAdministration__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProgramKey__c</fullName>
        <label>Parent Program Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentShortName__c</fullName>
        <label>Parent Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRequestSetting__c</fullName>
        <label>Payment Request Setting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramPathway__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1/12th</fullName>
                </value>
                <value>
                    <fullName>Lump-sum</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Required</fullName>
                </value>
                <value>
                    <fullName>80%(July) &amp; 20%(Dec)</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>PointOfContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PopularName__c</fullName>
        <label>Popular Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreapplicationCoordination__c</fullName>
        <label>Preapplication Coordination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryFundingOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Funding Organization</description>
        <label>Primary Funding Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Primary Funding Organization)</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgGroupCode__c</fullName>
        <label>Program Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramAccomplishments__c</fullName>
        <label>Program Accomplishments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProgramApproverName__c</fullName>
        <formula>ProgramApprover__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramBudgetTypeUSBE__c</fullName>
        <label>ProgramBudgetTypeUSBE</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramPathway__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramCFDA__c</fullName>
        <formula>HYPERLINK(&quot;https://na24.salesforce.com/&quot; &amp; Id, FederalProgramCFDA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Program CFDA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramClosebutton__c</fullName>
        <description>Decision field to show the program Close button</description>
        <formula>((EndDate__c) &gt; TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Close button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <formula>ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramGroupCode__c</fullName>
        <formula>Account__r.GroupCode__c</formula>
        <label>Program Group Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramIncomeTrackingRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Income Tracking Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramKey__c</fullName>
        <description>This is the unique key that can be mapped from the excel to Gov Grants.</description>
        <label>Program Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramNameText__c</fullName>
        <label>Program Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <description>This stores the Title of Program</description>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramPathway__c</fullName>
        <label>Program Pathway</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Fed-Formula</fullName>
                </value>
                <value>
                    <fullName>Application 1/12th</fullName>
                </value>
                <value>
                    <fullName>State-Competitive</fullName>
                </value>
                <value>
                    <fullName>Fed-Competitive</fullName>
                </value>
                <value>
                    <fullName>Lump-Sum-App</fullName>
                </value>
                <value>
                    <fullName>Lump-Sum-No-App</fullName>
                </value>
                <value>
                    <fullName>State-Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramPaymentBatchStatus__c</fullName>
        <label>Program Payment Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate</fullName>
                    <default>true</default>
                    <label>Initiate</label>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramPaymentBatch__c</fullName>
        <label>Program Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiate</fullName>
                    <default>true</default>
                    <label>Initiate</label>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramSpecificText__c</fullName>
        <label>Program Specific Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProgramSubType__c</fullName>
        <description>Dependent picklist for program Type</description>
        <label>Program Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Project Grants</fullName>
                    <default>true</default>
                    <label>Project Grants</label>
                </value>
                <value>
                    <fullName>Research Grants</fullName>
                </value>
                <value>
                    <fullName>Formula Grants</fullName>
                </value>
                <value>
                    <fullName>Block Grant</fullName>
                </value>
                <value>
                    <fullName>Earmark Grant</fullName>
                </value>
                <value>
                    <fullName>Formula Loans</fullName>
                </value>
                <value>
                    <fullName>Investment Loans</fullName>
                </value>
                <value>
                    <fullName>Sub Contract</fullName>
                </value>
                <value>
                    <fullName>Joint Agreements</fullName>
                </value>
                <value>
                    <fullName>Formula Based Agreements</fullName>
                </value>
                <value>
                    <fullName>Angel Investment Credits</fullName>
                </value>
                <value>
                    <fullName>Other Investment Credits</fullName>
                </value>
                <value>
                    <fullName>Emergency Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <description>The type of program.</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grant</fullName>
                    <default>true</default>
                    <label>Grant</label>
                </value>
                <value>
                    <fullName>Cooperative Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Tax Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgrammaticContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to provide details for the programmatic contact for the USBE award letter.</description>
        <label>Programmatic Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectGoals__c</fullName>
        <label>Project Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectKeyElements__c</fullName>
        <label>Project Key Elements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectLongTermObjectives__c</fullName>
        <label>Project Long Term Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectNarration__c</fullName>
        <label>Project Narration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectPeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(EndDate__c)),NOT(ISBLANK(StartDate__c))), TEXT(MONTH(StartDate__c))+&quot;/&quot; +TEXT(DAY(StartDate__c))+&quot;/&quot; +TEXT(YEAR(StartDate__c)) &amp; &quot; To &quot; &amp; TEXT(MONTH(EndDate__c))+&quot;/&quot; +TEXT(DAY(EndDate__c))+&quot;/&quot; +TEXT(YEAR(EndDate__c)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisheddate__c</fullName>
        <label>Published date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RangeandAverageofFinancialAssistanc__c</fullName>
        <label>Range &amp; Average Of Financial Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RangeofApprovalDisApprovalTime__c</fullName>
        <label>Range of Approval/DisApproval Time</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recovery__c</fullName>
        <label>Recovery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionalOrLocalOffice__c</fullName>
        <label>Regional Or Local Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegulationsGuidelinesAndLiterature__c</fullName>
        <label>Regulations, Guidelines And Literature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewals__c</fullName>
        <label>Renewals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResearchAndDevGrant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research And Development Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResearchProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether the program is a research program.</description>
        <label>Research Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewProcess__c</fullName>
        <label>ReviewProcess</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramPathway__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One step review</fullName>
                    <label>One Step Review</label>
                </value>
                <value>
                    <fullName>No Review</fullName>
                </value>
                <value>
                    <fullName>Three step review</fullName>
                    <isActive>false</isActive>
                    <label>Three Step Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskAssessmentRequired__c</fullName>
        <label>Risk Assessment Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoleCode__c</fullName>
        <formula>Account__r.GNT__RoleCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowActiveProgram__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL( RiskAssessmentRequired__c ,&apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Active Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start date of the program</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StateOldKey__c</fullName>
        <label>State Old Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateURL__c</fullName>
        <description>State URL for USBE Award letters.</description>
        <label>StateURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The current state of the program</description>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypesOfAssistance__c</fullName>
        <label>Types Of Assistance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Grants</fullName>
                </value>
                <value>
                    <fullName>Direct Payments with Unrestricted Use</fullName>
                </value>
                <value>
                    <fullName>DIRECT LOANS</fullName>
                </value>
                <value>
                    <fullName>DIRECT PAYMENTS FOR A SPECIFIED USE</fullName>
                </value>
                <value>
                    <fullName>Cooperative Agreements</fullName>
                </value>
                <value>
                    <fullName>Formula Grants</fullName>
                </value>
                <value>
                    <fullName>Guaranteed/Insured Loans</fullName>
                </value>
                <value>
                    <fullName>DISSEMINATION OF TECHNICAL INFORMATION</fullName>
                </value>
                <value>
                    <fullName>ADVISORY SERVICES AND COUNSELING</fullName>
                </value>
                <value>
                    <fullName>PROVISION OF SPECIALIZED SERVICES</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
                <value>
                    <fullName>INVESTIGATION OF COMPLAINTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USBEIndirectCostRate__c</fullName>
        <label>USBE Indirect Cost Rate</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProgramPathway__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>Unrestricted</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Restricted </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>